Basic features added