@@ -4,10 +4,35 @@
   <artifactId>myartifactid</artifactId>
   <version>0.0-SNAPSHOT</version>
   <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
+      <dependency>
+          <groupId>net.sf.sevenzipjbinding</groupId>
+          <artifactId>sevenzipjbinding</artifactId>
+          <version>16.02-2.01</version>
+      </dependency>
+      <dependency>
+          <groupId>net.sf.sevenzipjbinding</groupId>
+          <artifactId>sevenzipjbinding-all-platforms</artifactId>
+          <version>16.02-2.01</version>
+      </dependency>
+      <dependency>
+          <groupId>net.samuelcampos</groupId>
+          <artifactId>usbdrivedetector</artifactId>
+          <version>2.2.1</version>
+      </dependency>
+      <dependency>
+          <groupId>commons-io</groupId>
+          <artifactId>commons-io</artifactId>
+          <version>2.21.0</version>
+      </dependency>
+      <dependency>
+          <groupId>org.apache.hadoop</groupId>
+          <artifactId>hadoop-annotations</artifactId>
+          <version>3.4.2</version> <!-- Replace with the desired Hadoop version -->
+      </dependency>
+      <dependency>
+        <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.12</version>
+      <version>4.13.1</version>
       <type>jar</type>
     </dependency>
   </dependencies>
@@ -17,8 +42,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>14</source>
-                    <target>14</target>
+                    <source>22</source>
+                    <target>22</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
         </plugins>
